# pbrsdk

./: .gitignore  Cargo.toml  Dockerfile  README.md  demo-data.json  docker-compose.yaml  entrypoint.sh  init-demo-pb.js  package-lock.json  package.json  pb_schema.json
example/: Cargo.toml
example/src/: main.rs
pb_data/: data.db
pbrsdk_derive/: Cargo.toml
pbrsdk_derive/src/: lib.rs
pbrsdk_macros/: Cargo.toml
pbrsdk_macros/src/: lib.rs
src/: auth.rs  collection_service.rs  common.rs  cookies.rs  error.rs  lib.rs  pocketbase.rs  record_service.rs  services.rs  tests.rs
src/services/: collection_service.rs  record_service.rs
