workspace = { members = ["example", "pbrsdk_macros"] }

[package]
name = "pbrsdk"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An unofficial Rust SDK for pocketbase clients."
authors = ["ThomasGysemans<thomas@gysemans.dev>"]
repository = "https://github.com/ThomasGysemans/pbrsdk"
readme = "README.md"
keywords = ["pocketbase", "sdk", "pb", "rust-pocketbase"]
categories = ["development-tools"]

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
pbrsdk_macros = { path = "./pbrsdk_macros" }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
